Make properties into records